mise en place des pages colocations

--- a/src/AppBundle/Resources/views/default/index.html.twig
+++ b/src/AppBundle/Resources/views/default/index.html.twig
@@ -16,7 +16,7 @@
   </div>
   <div class="row">
     <div class="offset-s8 col s4">
-      <a href="#" class="btn waves-effect waves-light">L'éco-colocation</a>
+      <a href="{{ path('app_ecocolocation') }}" class="btn waves-effect waves-light">L'éco-colocation</a>
     </div>
   </div>
 </div>
@@ -30,7 +30,7 @@
 </div>
 <div class="row">
   <div class="offset-s8 col s4">
-    <a href="#" class="btn waves-effect waves-light">Suis-je une écocoloc ?</a>
+    <a href="{{ path('app_ecocolocation') }}" class="btn waves-effect waves-light">Suis-je une écocoloc ?</a>
   </div>
 </div>
 <div class="carto">
@@ -45,7 +45,7 @@
 </div>
 <div class="row">
   <div class="offset-s8 col s4">
-    <a href="#" class="btn waves-effect waves-light">Les colocs</a>
+    <a href="{{ path('colocation_index') }}" class="btn waves-effect waves-light">Les colocs</a>
   </div>
 </div>
  <script>
