--- a/src/AppBundle/Resources/public/stylesheets/main.css
+++ b/src/AppBundle/Resources/public/stylesheets/main.css
@@ -18,16 +18,37 @@ main {
   flex: 1 0 auto;
 }
 
+.row {
+  margin-left: 0 !important;
+  margin-right: 0 !important;
+}
+
+.noteworthy {
+  font-family: 'Noteworthy';
+
+}
+.rose {
+  color: #F987BA;
+}
+
+.bleu {
+  color: #00C2D6;
+}
+
 h6 {
   font-size: 16px;
   font-weight: 800;
 }
 
 .fullImage {
-	width: 100%;
   margin: 0;
   height: auto;
   padding: 0;
+}
+
+.texte_grand {
+  font-size: 32px;
+  font-family: 'Noteworthy';
 }
 
 .citation {
@@ -36,6 +57,21 @@ h6 {
   margin-left:10px;
 }
 
+h1 {
+  font-family: 'Noteworthy';
+  text-align: center;
+}
+
+h2 {
+  font-family: 'Noteworthy';
+  font-weight: 800;
+}
+
+.small {
+  width: 75px;
+  margin-top:20px;
+  margin-left:25px;
+}
 .colGuillemet {
   width:3% !important;
   margin-top:2%;
@@ -58,10 +94,24 @@ h6 {
 }
 
 .carto {
-	width: 100%;
+  width: 100%;
   margin: 0;
   height: 300px;
   padding: 0;
+}
+
+.pictos {
+  margin-left: 0;
+  margin-right: 0;
+  font-family: 'Noteworthy';
+}
+
+.colPicto {
+  width: 30px !important;
+}
+
+.picto {
+  width: 25px;
 }
 
 footer {
@@ -73,4 +123,8 @@ footer {
 
 .footer_logo {
   max-width: 50%;
+}
+
+footer a {
+  color: white;
 }
