--- a/src/AppBundle/Resources/views/colocation/new.html.twig
+++ b/src/AppBundle/Resources/views/colocation/new.html.twig
@@ -52,7 +52,7 @@
         <img class="small" src="{{ asset('bundles/app/images/housevert.png')}}" alt="">
       </div>
       <div class="col s9">
-        <h2>Ce qu'on y fait</h2>
+        <h2 class="bleu">Ce qu'on y fait</h2>
       </div>
     </div>
     <div class="row">
