--- a/src/AppBundle/Resources/views/colocation/new.html.twig
+++ b/src/AppBundle/Resources/views/colocation/new.html.twig
@@ -181,6 +181,13 @@
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque blanditiis perferendis rerum soluta. Dicta excepturi, iste, at pariatur error, incidunt omnis nemo modi consectetur deserunt sed libero maiores, quas nihil.
       </div>
     </div>
+    <div class="row">
+        <div class="col s12">
+            {{ form_label(form.photo) }}
+            {{ form_errors(form.photo) }}
+            {{ form_widget(form.photo) }}
+        </div>
+    </div>
 
     <div class="row">
       <div class="center">
