--- a/src/AppBundle/Resources/views/colocation/show.html.twig
+++ b/src/AppBundle/Resources/views/colocation/show.html.twig
@@ -2,7 +2,10 @@
 
 {% block body %}
     <h1>{{ colocation.nom }}</h1>
-
+<div class="row">
+  <div class="col s12 valign-wrapper photoPart">
+    <img src="{{ asset('uploads/images/') }}{{colocation.photo}}" alt="photo colocation">
+  </div></div>
 <div class="row pictos">
   <div class="offset-s3 col s1 colPicto">
     <img class="picto" src="{{asset('bundles/app/images/nombrePersonnes.png')}}" alt="profil">
