--- a/src/AppBundle/Resources/views/colocation/show.html.twig
+++ b/src/AppBundle/Resources/views/colocation/show.html.twig
@@ -5,7 +5,8 @@
 <div class="row">
   <div class="col s12 valign-wrapper photoPart">
     <img src="{{ asset('uploads/images/') }}{{colocation.photo}}" alt="photo colocation">
-  </div></div>
+  </div>
+</div>
 <div class="row pictos">
   <div class="offset-s3 col s1 colPicto">
     <img class="picto" src="{{asset('bundles/app/images/nombrePersonnes.png')}}" alt="profil">
@@ -31,6 +32,8 @@
   <div class="offset-s1 col s1">
     <img class="small" src="{{ asset('bundles/app/images/housevert.png')}}" alt="">
   </div>
+</div>
+<div class="row">
   <div class="col s9">
     <h2>Rendez-nous visite !</h2>
   </div>
