--- a/src/AppBundle/Resources/views/colocation/index.html.twig
+++ b/src/AppBundle/Resources/views/colocation/index.html.twig
@@ -14,9 +14,28 @@
         <img class="small" src="{{ asset('bundles/app/images/housevert.png')}}" alt="">
     </div>
     <div class="col s9">
-        <h2 class="bleu">Ce qu'on y fait</h2>
+        <h2 class="bleu">Les colocs</h2>
     </div>
 </div>
+    <div class="row">
+        {%  for colocation in colocations %}
+            {% if colocation.photo %}
+        <div class="col s3">
+            <img class="smallImage" src="{{ asset('uploads/images/') }}{{colocation.photo}}" alt="photo colocation">
+        </div>
+        {% else %}
+            <div class="col s3">
+                <img class="smallImage" src="{{ asset('bundles/app/images/housevert.png')}}" alt="">
+            </div>
+            {% endif %}
+       <div class="col s3">
+           {{ colocation.nom }}
+           {{ colocation.description[:100] | raw }}(...)
+           <a class="btn waves-effect waves-light" href="{{ path('colocation_show', { 'id': colocation.id }) }}">Super !</a>
+       </div>
+        {% endfor %}
+    </div>
+
     {#<a href="{{ path('colocation_show', { 'id': colocation.id }) }}">{{ colocation.id }}</a>#}
     {#<a href="{{ path('colocation_show', { 'id': colocation.id }) }}">show</a>#}
     {#<a href="{{ path('colocation_edit', { 'id': colocation.id }) }}">edit</a>#}
