--- a/src/AppBundle/Resources/views/ecocolocation.html.twig
+++ b/src/AppBundle/Resources/views/ecocolocation.html.twig
@@ -74,4 +74,38 @@
             <h2 id="concept">Le mouvement des Ecocolocs</h2>
         </div>
     </div>
+    <div class="row">
+        <div class="col s6">
+            <p>
+                Nous souhaitons nous rencontrer pour partager et apprendre les un.es
+                des autres, afin de s’entraider à la mise en place d’actions concrètes
+                pour un mode de vie plus résilient.<br/>
+                Ce mouvement est également l’occasion de rendre visible auprès du grand
+                public des solutions pour mieux vivre ensemble dans un monde durable.
+            </p>
+            <h5>Pourquoi un site ?</h5>
+            <p>
+                Ce site émerge de la volonté de mettre en relation des colocations en
+                transition. Il est un facilitateur, un outil pour aider à mettre en relation, de
+                façon simple et libre, des colocations en transition. La création et l’utili-
+                sation de cet outil se base sur des logiciels libres (d’usage).
+                Un réseau, ensemble
+            </p>
+            <p>
+                Ce site est une expérimentation : il est potentiellement incomplet et amé-
+                liorable. Nous souhaitons construire ce mouvement avec ses membres,
+                et le site pourra évoluer avec le temps. N’hésitez pas à nous faire vos
+                retours, et à nous contacter si vous souhaitez échanger sur ce projet !
+            </p>
+            <h5>Qui se trouve derrière ?</h5>
+            <p>
+                Une rencontre entre les colocataires de la Maison Bleue et des ci-
+                toyens-es motivés-es !
+            </p>
+        </div>
+        <div class="col s6">
+            <img src="{{ asset('bundles/app/images/11884573_393346624197783_3620371679756315946_o.jpg') }}" alt="">
+            <img src="{{ asset('bundles/app/images/1231025-colocation-sauve-la-plane-t-c-plainpicture-700x350.jpg') }}" alt="">
+        </div>
+    </div>
 {% endblock body %}
