modifications des pages colocations

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -35,7 +35,7 @@
                 </div>
               </div>
               <div class="col l3 m6 s12">
-                  <h6>Les colocs</h6>
+                  <a href="{{ path('colocation_index') }}"><h6>Les colocs</h6></a>
               </div>
               <div class="col l3 m6 s12">
                   <h6>Les sites utiles</h6>
