modification d'un titre

--- a/src/AppBundle/Resources/views/ecocolocation.html.twig
+++ b/src/AppBundle/Resources/views/ecocolocation.html.twig
@@ -47,7 +47,7 @@
             <img class="small" src="{{ asset('bundles/app/images/housebleu.png')}}" alt="">
         </div>
         <div class="col s11 rose">
-            <h2 id="concept">Le concept</h2>
+            <h2 id="concept">Suis-je une écocoloc ?</h2>
         </div>
     </div>
     <div class="row">
